<resources>
    <string name="app_name">capstone project</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_user">Welcome \n%s</string>
    <string name="question_name">What is your full name?</string>
    <string name="full_name">full name</string>
    <string name="lets_go">let\'s go!</string>
    <string name="question_who_win">Who will win this time?</string>
    <string name="everyone_here">Is everyone here?</string>
    <string name="new_player_hint">Select or create a new player</string>
    <string name="new_player_introduction">A new player enters the game</string>
    <string name="cancel">cancel</string>
    <string name="create">create</string>
    <string name="remove_player">Are you sure you want to remove this player?\n\nAny player results in games will also be removed!</string>
    <string name="remove_game">Are you sure you want to remove this game?\n\nAll games played with these rules will be removed!</string>
    <string name="start_new_game">start new game</string>
    <string name="manage_players">manage players</string>
    <string name="manage_games">manage games</string>
    <string name="history">history</string>
    <string name="leaderboards">leaderboards</string>
    <string name="manage_game_hint">Change rules or create a new game</string>

    <string name="a_new_game">A new game!?</string>
    <string name="track_game_hint">How will we track the game?</string>
    <string name="numeric">numeric</string>
    <string name="letters">letters</string>
    <string name="letters_hint">What kind of word are we using?</string>
    <string name="numeric_hint">What amount are we using?</string>
    <string name="numeric_input_hint">amount</string>
    <string name="letters_input_hint">word</string>
    <string name="game_end_hint">What is the final result?</string>
    <string name="win">win</string>
    <string name="lose">lose</string>
    <string name="game_name_hint">Name it and claim it!</string>
    <string name="game_name">name of game</string>
    <string name="save_game_rules">save game rules</string>

    <string name="start_game_hint">Let\'s do this!</string>
    <string name="who_will_play">Who will play with you?</string>
    <string name="what_game">What game will you be playing?</string>
    <string name="go_to_next_step">go to next step</string>
    <string name="start_game">start game</string>

    <string name="who_will_win">Who will win?</string>
    <string name="game_hint">Select a player to add or remove points</string>

    <string name="hello_blank_fragment"> </string>
    <string name="add_points">How many points would you like to add?</string>
    <string name="reset">reset</string>
    <string name="confirm">confirm</string>

    <string name="not_yet_implemented">This functionality is not yet implemented.</string>

    <string name="the_winner_is">And the winner is!</string>
    <string name="points_between">A big win with %d points between the second best!</string>
    <string name="another_round">let\'s play another round</string>
    <string name="back_to_main">i want to go back to the main menu</string>

    <string name="look_at_history">Let\'s look at your history</string>
    <string name="open_game_session">Do you want to continue this game?</string>

    <string name="winner">Winner!</string>
    <string name="game_session_title">%s | %s</string>

    <integer-array name="track_kinds">
        <item>@string/numeric</item>
        <item>@string/letters</item>
    </integer-array>
</resources>